objects/hed__Program_Plan__c.object
<CustomObject>
    <description>Links Courses to an Academic Program to create a path for students to follow. An Academic Program can list multiple Courses, and a Course can be associated with multiple Academic Programs.</description>
    <fields>
        <fullName>hed__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to find an Account (often an Academic Program).</description>
        <inlineHelpText>Click to search for an Account (often an Academic Program) to associate with the Program Plan.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Plans</relationshipLabel>
        <relationshipName>Program_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>The description of Program Plan.</description>
        <inlineHelpText>Describe the Program Plan.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <description>The end date for the Program Plan.</description>
        <inlineHelpText>The end date for the Program Plan.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to designate this Plan as the one to assign to a student when creating a Program Enrollment</description>
        <inlineHelpText>Checkbox to designate this Plan as the one to assign to a student when creating a Program Enrollment</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <description>The date the Program Plan went into effect.</description>
        <inlineHelpText>The date the Program Plan went into effect.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Status__c</fullName>
        <description>The status of the program plan.</description>
        <inlineHelpText>The status of the program plan.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Total_Required_Credits__c</fullName>
        <description>The total number of credits a student must complete to satisfy this Program Plan.</description>
        <inlineHelpText>Specify the total number of credits a student must complete to satisfy this program plan.</inlineHelpText>
        <label>Total Required Credits</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Version__c</fullName>
        <description>The version of the Program Plan. For example, “Spring 2019.”</description>
        <inlineHelpText>The version of the Program Plan. For example, “Spring 2019.”</inlineHelpText>
        <label>Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Program Plan</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>hed__Primary_Program_Plan</fullName>
        <columns>NAME</columns>
        <columns>hed__Account__c</columns>
        <columns>hed__Start_Date__c</columns>
        <columns>hed__End_Date__c</columns>
        <columns>hed__Is_Primary__c</columns>
        <columns>hed__Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>hed__Is_Primary__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Primary Program Plan</label>
    </listViews>
    <nameField>
        <label>Program Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>